--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | QR code component</title>
 
 </head>
 <body>
 <div class="white-box">
+
+    <img src="images\image-qr-code.png" alt="QR code image">
 
   <h1>Improve your front-end skills by building projects</h1>
 
